@@ -1,3 +1,11 @@
+2002-12-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03577] incorrect table width
+	* table.c (dv2sv): fix move direction
+		(set_integered_width): ditto
+		(check_table_height): ditto
+		(feed_table_tag): ditto
+
 2002-12-17  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03576] Re: news support
